bug: Fix link paths

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Wild Tours</title>
+    <!-- fav icon -->
+    <link  href="./assets/img/favicon.png" rel="shortcut icon">
     <!-- style sheets-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <script src="js/controller/index.js" type="module" defer ></script>
+    <link href="./css/style.css" rel="stylesheet">
+    <script src="./js/controller/index.js" type="module" defer ></script>
 </head>
 
 <!-- body -->
@@ -146,7 +148,7 @@
             <h3 class="heading heading--3 heading--green text--center mb--large">Popular packages</h3>
             <div class="packages__box">
             <article class="package">
-                <img src="./assets/img//forest-1.jpg" class="package__img mb--medium">
+                <img src="./assets/img/forest-1.jpg" class="package__img mb--medium">
                 <h5 class="heading heading--5 mb--small">Beginner</h5>
                 <ul class="package__list mb--small">
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
@@ -157,7 +159,7 @@
                 </ul>
             </article>
             <article class="package">
-                <img src="./assets/img//forest-2.jpg" class="package__img mb--medium">
+                <img src="./assets/img/forest-2.jpg" class="package__img mb--medium">
                 <h5 class="heading heading--5 mb--small">Intermediate</h5>
                 <ul class="package__list mb--small">
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
@@ -168,7 +170,7 @@
                 </ul>
             </article>
             <article class="package">
-                <img src="./assets/img//forest-3.jpg" class="package__img mb--medium">
+                <img src="./assets/img/forest-3.jpg" class="package__img mb--medium">
                 <h5 class="heading heading--5 mb--small">Advanced</h5>
                 <ul class="package__list mb--small">
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
