bug: Fix active state on scroll

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,7 @@
         </section> 
         <!-- booking -->
         <section  id="booking" class="booking" data-id="booking">
+            <h3 class="heading heading--3 heading--white text-center mb--large">Book your tour today</h3>
             <form class="form">
                 <label class="form__label" for="input-email">Email:</label>
                 <input id="input-email" class="form__input form__input--email" name="email" placeholder="email" type="email" required>
